--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.2",
+    "mongoose": "^5.0.1",
     "nodemon": "^1.14.7",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
