--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Binay Verma",
   "license": "MIT",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "mongoose": "^5.0.1",
     "nodemon": "^1.14.7",
