--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "node",
   "version": "1.0.0",
   "description": "",
-  "main": "server/index.js",
+  "main": "index.js",
   "engines": {
     "node": "8.1.1",
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "node",
