React App Generation, seperate front end server, and running clinet and server using concurrently

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node",
+  "name": "emaily-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,9 @@
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [
     "node",
@@ -26,6 +28,7 @@
   "author": "Binay Verma",
   "license": "MIT",
   "dependencies": {
+    "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "mongoose": "^5.0.1",
